--- a/views/class_test_method.erb
+++ b/views/class_test_method.erb
@@ -1,5 +1,4 @@
 <div class="container">
   <div class="page-header">
-    <h1>You know, I like <%= params[:test_class]%>.</h1>
-    <h2>I'll may be probably sue <%= params[:test_method]%></h2>
+    This page can be used to show history of <span class="mp_name_class"><%=params[:test_method]%></span> in <span class="mp_name_class"><%=params[:test_class]%></span>
 </div>
