--- a/views/main.erb
+++ b/views/main.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="page-header">
-    <h1>Test history for <%= @mp_name %> over last 30 days</h1>
+    <h3>Test history for <span class="mp_name_class"><%= @mp_name %></span> over last 30 days</h3>
   </div>
   <table class="table table-bordered mytable">
     <thead>
