--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,11 +10,13 @@
     <link href="/css/bootstrap.css" rel="stylesheet">
     <link href="/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="/css/text.css" rel="stylesheet">
+    <link href="/css/chart.css" rel="stylesheet">
     <link href="/css/jquery.dynatable.css" rel="stylesheet">
 
     <script type="text/javascript" src="/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/jquery.min.js"></script>
     <script type="text/javascript" src="/js/jquery.dynatable.js"></script>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
 </head>
 <body>
    <%= yield %>
