--- a/views/index.erb
+++ b/views/index.erb
@@ -54,7 +54,7 @@ code {
 </pre></div>
 
 <br/>
-    <p><a class="btn btn-primary" style="color:white" href="http://localhost:9292/SampleProject/LoginViewTests/testHappyPath" role="button">/SampleProject/LoginViewTests/testHappyPath</a></p>
+    <p><a class="btn btn-primary" style="color:white" href="/SampleProject/LoginViewTests/testHappyPath" role="button">/SampleProject/LoginViewTests/testHappyPath</a></p>
 <br/>
 <br/>
 <br/>
